Added a few more effects.

--- a/animations.html
+++ b/animations.html
@@ -8,7 +8,6 @@
     <link rel="stylesheet" href="general.css">
     <style>
 
-
         /* Animation: card fly-in animation */
         @keyframes card-flyin {
             0% {left: -1000px; }
@@ -18,8 +17,9 @@
         .card-img {
             position:relative;            
             left: 0;   
-            animation-name: card-flyin; 
-            animation-duration: 0.5s;
+            animation-name: card-flyin;
+            animation-timing-function:ease-out;
+            animation-duration: 1s;
         }
 
     </style>
